use app.config save config

--- a/src/FliqloWPF.csproj
+++ b/src/FliqloWPF.csproj
@@ -68,6 +68,11 @@
     </Compile>
     <Compile Include="IniFile.cs" />
     <Compile Include="ObservableObject.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="UIElementClone.cs" />
     <Page Include="Fonts.xaml">
       <SubType>Designer</SubType>
@@ -109,6 +114,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
